# server/openapi_server/openapi/openapi.yaml
@@ -12,28 +12,28 @@ info:
     name: Apache 2.0
     url: https://github.com/Sage-Bionetworks/nlp-sandbox/blob/main/LICENSE
   title: NLP Sandbox Person Name Annotator API
-  version: 0.1.6
+  version: 0.2.0
   x-logo:
     url: https://Sage-Bionetworks.github.io/nlp-sandbox-schemas/logo.png
 servers:
 - url: http://example.com/api/v1
 - url: https://example.com/api/v1
 tags:
-- description: Operations about API health
-  name: Health
-- description: Operations about person names
-  name: Person Name
+- description: Operations about text person name annotations
+  name: TextPersonNameAnnotation
+- description: Operations about this API service
+  name: Service
 paths:
-  /health:
+  /service:
     get:
-      description: Get the health of the API
-      operationId: health
+      description: Get information about the service
+      operationId: service
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Health'
+                $ref: '#/components/schemas/Service'
           description: Success
         "403":
           content:
@@ -47,36 +47,36 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: The specified resource was not found
-      summary: Get Health
+      summary: Get service information
       tags:
-      - Health
-      x-openapi-router-controller: openapi_server.controllers.health_controller
-  /person-names:
+      - Service
+      x-openapi-router-controller: openapi_server.controllers.service_controller
+  /textPersonNameAnnotations:
     post:
-      description: Returns the person name annotations
-      operationId: person_names_read_all
+      description: Return the person name annotations found in a clinical note
+      operationId: create_text_person_name_annotations
       requestBody:
         content:
           application/json:
             schema:
-              items:
-                $ref: '#/components/schemas/Note'
-              type: array
+              $ref: '#/components/schemas/Note'
       responses:
         "200":
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/PersonNameAnnotation'
-                type: array
+                $ref: '#/components/schemas/TextPersonNameAnnotations'
           description: Success
         "403":
-          description: Forbidden
-      summary: Get all person name annotations
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+      summary: Annotate person names in a clinical note
       tags:
-      - Person Name
-      x-openapi-router-controller: openapi_server.controllers.person_name_controller
+      - TextPersonNameAnnotation
+      x-openapi-router-controller: openapi_server.controllers.text_person_name_annotation_controller
 components:
   responses:
     Unauthorized:
@@ -92,18 +92,80 @@ components:
             $ref: '#/components/schemas/Error'
       description: The specified resource was not found
   schemas:
-    Health:
+    Note:
+      description: A clinical note
       example:
-        status: pass
+        noteType: loinc:LP29684-5
+        patientId: 507f1f77bcf86cd799439011
+        id: id
+        text: This is the content of a clinical note.
       properties:
-        status:
-          description: Health status
-          enum:
-          - pass
-          - warn
+        id:
+          description: The ID of the note
+          readOnly: true
           type: string
+        text:
+          description: The content of the clinical note
+          example: This is the content of a clinical note.
+          type: string
+        noteType:
+          description: The note type (LOINC concept)
+          example: loinc:LP29684-5
+          type: string
+        patientId:
+          description: The patient ID
+          example: 507f1f77bcf86cd799439011
+          type: string
+      required:
+      - noteType
+      - text
+      type: object
+    TextAnnotation:
+      description: An annotation in a text
+      properties:
+        start:
+          description: The position of the first character
+          example: 42
+          type: integer
+        length:
+          description: The length of the annotation
+          example: 10
+          type: integer
+        text:
+          description: The string annotated
+          type: string
+      required:
+      - length
+      - start
+      type: object
+    TextPersonNameAnnotation:
+      allOf:
+      - $ref: '#/components/schemas/TextAnnotation'
+      description: A person name annotation in a text
+      example:
+        start: 42
+        length: 11
+        text: Chloe Price
+      type: object
+    TextPersonNameAnnotations:
+      description: A list of text person name annotations
+      example:
+        textDateAnnotations:
+        - start: 42
+          length: 11
+          text: Chloe Price
+        - start: 42
+          length: 11
+          text: Chloe Price
+      properties:
+        textDateAnnotations:
+          description: A list of text person name annotations
+          items:
+            $ref: '#/components/schemas/TextPersonNameAnnotation'
+          type: array
       type: object
     Error:
+      description: Problem details (tools.ietf.org/html/rfc7807)
       properties:
         title:
           description: A human readable documentation for the problem type
@@ -122,93 +184,55 @@ components:
       - status
       - title
       type: object
-    Email:
-      description: User email address
-      example: john.smith@example.com
-      format: test
-      type: string
-    User:
+    Service:
+      description: Information about an NLP service
+      example:
+        license: Apache-2.0
+        authorEmail: author@example.com
+        author: Example Author
+        name: awesome-date-annotator
+        description: An awesome Date Annotator based on regex patterns
+        repository: github:awesome-org/awesome-date-annotator
+        version: 1.0.0
+        url: https://openapi-generator.tech
       properties:
-        username:
-          example: John78
-          minLength: 4
+        name:
+          description: The service name
+          example: awesome-date-annotator
+          maxLength: 60
+          minLength: 3
+          pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*$
           type: string
-        firstName:
-          example: John
+        version:
+          description: The version of the service (SemVer string)
+          example: 1.0.0
+          minLength: 1
+          pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
           type: string
-        lastName:
-          example: Smith
+        license:
+          description: The license of this service (spdx.org/licenses Identifier)
+          example: Apache-2.0
           type: string
-        email:
-          description: User email address
-          example: john.smith@example.com
-          format: test
+        repository:
+          description: The place where the code lives
+          example: github:awesome-org/awesome-date-annotator
           type: string
-      required:
-      - email
-      - firstName
-      - lastName
-      - username
+        description:
+          description: A short, one-sentence summary of the service
+          example: An awesome Date Annotator based on regex patterns
+          maxLength: 100
+          type: string
+        author:
+          description: The author of the service
+          example: Example Author
+          type: string
+        authorEmail:
+          description: The email address of the author
+          example: author@example.com
+          format: email
+          type: string
+        url:
+          description: The URL to the homepage of the service
+          format: uri
+          type: string
       type: object
-    Entity:
-      type: object
-      properties:
-        id:
-          description: ID
-          type: integer
-          example: 0
-        createdBy:
-          description: The User who created this entity
-          $ref: '#/components/schemas/User'
-        createdAt:
-          description: When the entity has been created
-          type: string
-          format: date-time
-        updatedBy:
-          description: The User who update this entity
-          $ref: '#/components/schemas/User'
-        updatedAt:
-          description: When the entity has been updated
-          type: string
-          format: date-time
-    Note:
-      type: object
-      description: A clinical note
-      allOf:
-        - $ref: '#/components/schemas/Entity'
-        - type: object
-          properties:
-            text:
-              description: The content of the note
-              type: string
-              example: 'On 09-03-1999, Ms Chloe Price met with Dr Joe.'
-            type:
-              description: The note type
-              type: string
-              enum:
-                - pathology
-                - phone_call
-    Annotation:
-      type: object
-      description: An annotation in a text
-      allOf:
-        - $ref: '#/components/schemas/Entity'
-        - type: object
-          properties:
-            noteId:
-              description: The note ID
-              type: integer
-            start:
-              description: The position of the first character
-              type: integer
-            length:
-              description: The length of the annotation
-              type: integer
-            text:
-              description: The string annotated
-              type: string
-    PersonNameAnnotation:
-      type: object
-      description: A person name annotation in a text
-      allOf:
-        - $ref: '#/components/schemas/Annotation'
